# Libyuv-Android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/raysees/libyuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/raysees/libyuv/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/raysees/libyuv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libyuv/: CMakeLists.txt  build.gradle
libyuv/src/androidTest/java/com/raysees/libyuv/: ExampleInstrumentedTest.java
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: YuvJni.cpp
libyuv/src/main/cpp/libyuv/include/: libyuv.h
libyuv/src/main/java/com/raysees/libyuv/: YuvUtil.java
